--- a/styles/style.css
+++ b/styles/style.css
@@ -26,11 +26,52 @@ body {
     align-items: center;
 }
 
+.main_navigation_right ul a {
+    text-decoration: none;
+    color: white;
+}
+
 .main_navigation_right ul li {
     list-style: none;
     margin: 0 23px;
+    font-weight: 400;
 }
 
 .main_navigation_left {
-    font-size: 1.3rem;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.main_section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 60px 0;
+}
+
+.main_section>div {
+    width: 30%;
+}
+
+.left_section {}
+
+.left_section h1 {
+    font-size: 3rem;
+}
+
+.left_section h1 .purple {
+    color: blueviolet;
+    font-size: 3rem;
+}
+
+.left_section .sub_heading {
+    font-size: 2rem;
+}
+
+.right_section {}
+
+.right_section img {
+    width: 100%;
+    height: 100%;
+    /* margin: 40px -50px; */
 }
