--- a/styles/style.css
+++ b/styles/style.css
@@ -26,9 +26,14 @@ body {
     align-items: center;
 }
 
-.main_navigation_right ul a {
+.main_navigation_right ul li a {
     text-decoration: none;
     color: white;
+}
+
+.main_navigation_right ul li a:hover {
+    color: blueviolet;
+    font-size: 1.02rem;
 }
 
 .main_navigation_right ul li {
@@ -53,8 +58,6 @@ body {
     width: 30%;
 }
 
-.left_section {}
-
 .left_section h1 {
     font-size: 3rem;
 }
@@ -67,8 +70,6 @@ body {
 .left_section .sub_heading {
     font-size: 2rem;
 }
-
-.right_section {}
 
 .right_section img {
     width: 100%;
