--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -16,7 +17,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    height: 80px;
+    height: 70px;
     background-color: rgb(14, 14, 63);
 }
 
@@ -121,11 +122,12 @@ body {
     /* background-color: green; */
     max-width: 80vw;
     height: 100vh;
-    margin: 0 auto;
+    margin: 0px auto;
 }
 
 .second_section h1 {
     font-size: 1.5rem;
+    margin: 90px 0px;
 }
 
 .second_section .box {
@@ -147,16 +149,16 @@ body {
 }
 
 .img_top {
-    width: 50px;
+    width: 40px;
     position: relative;
-    top: -57px;
-    left: -25px;
+    top: -48px;
+    left: -20px;
 }
 
 
 .vertical_title {
     position: relative;
-    top: 36px;
+    top: 48px;
     width: 175px;
 }
 
@@ -164,6 +166,7 @@ body {
     position: relative;
     top: 54px;
     width: 200px;
-    font-size: 14px;
-    font-weight: lighter;
+    font-size: 15px;
+    font-weight: 400;
+    color: rgb(158, 158, 158);
 }
