--- a/styles/style.css
+++ b/styles/style.css
@@ -97,12 +97,13 @@ body {
 
 .btn {
     font-size: 1rem;
-    padding: 15px 25px;
-    border-radius: 22px;
+    padding: 12px;
+    border-radius: 8px;
     background-color: rgb(144, 69, 214);
     color: white;
-    outline: none;
-    border: 1px solid transparent;
+    /* outline: none; */
+    border: 1px solid white;
+    cursor: pointer;
 }
 
 .btn:hover {
